--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,9 @@ jobs:
     steps:
       - name: Check out repository code
         uses: actions/checkout@v4
+      - name: Set up Node.js environment
+        run: |
+          npm install -g npm
       - name: Install dependencies
         run: npm ci
       - name: Connect to PostgreSQL
