--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,7 @@ jobs:
         uses: actions/checkout@v4
       - name: Set up Node.js environment
         run: |
+          npm install
           npm install -g npm
       - name: Install dependencies
         run: npm ci
