--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,28 +6,13 @@ jobs:
 
   container-job:
     runs-on: ubuntu-latest
-    container: node:20.10
     services:
       postgres:
-        image: postgres
+        image: postgres:latest
         env:
             POSTGRES_DB: chitter_test
-    steps:
-      - name: Check out repository code
-        uses: actions/checkout@v4
-      - name: Set up Node.js environment
-        run: |
-          npm install
-          npm install -g npm
-      - name: Install dependencies
-        run: npm ci
-      - name: Connect to PostgreSQL
-        run: node client.js
-        env:
             POSTGRES_HOST: postgres
             POSTGRES_PORT: 5432
-      - name: Wait for PostgreSQL to be ready
-        run: dockerize -wait tcp://localhost:5432 -timeout 1m
 
   test:
     # Setup vm
