--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,6 +13,13 @@ jobs:
             POSTGRES_DB: chitter_test
             POSTGRES_HOST: postgres
             POSTGRES_PORT: 5432
+    steps:
+      - name: Wait for PostgreSQL to be ready
+        run: |
+            until PGPASSWORD='' psql -h $POSTGRES_HOST -U $POSTGRES_USER -d $POSTGRES_DB -c '\q'; do
+                echo "Waiting for PostgreSQL to be ready..."
+                sleep 2
+            done
 
   test:
     # Setup vm
