--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,26 +4,11 @@ on: push
 
 jobs:
 
-  container-job:
-    runs-on: ubuntu-latest
-    services:
-      postgres:
-        image: postgres:latest
-        env:
-            POSTGRES_DB: chitter_test
-            POSTGRES_HOST: postgres
-            POSTGRES_PORT: 5432
-    steps:
-      - name: Wait for PostgreSQL to be ready
-        run: |
-            until PGPASSWORD='' psql -h $POSTGRES_HOST -U $POSTGRES_USER -d $POSTGRES_DB -c '\q'; do
-                echo "Waiting for PostgreSQL to be ready..."
-                sleep 2
-            done
-
   test:
     # Setup vm
     runs-on: ubuntu-latest
+    env:
+      POSTGRES_DB: ${{ secrets.POSTGRES_DB }}
 
     steps:
       - name: Check out the code
@@ -45,7 +30,3 @@ jobs:
       - name: Test with pytest
         run: |
           pipenv run pytest
-        env:
-          POSTGRES_HOST: postgres
-          POSTGRES_PORT: 5432
-          POSTGRES_DB: chitter_test
