--- a/Pipfile
+++ b/Pipfile
@@ -6,10 +6,11 @@ name = "pypi"
 [packages]
 flask = "*"
 pytest = "*"
-psycopg = "*"
 bcrypt = "*"
 pytest-xprocess = "*"
 playwright = "*"
+psycopg = "*"
+psycopg-binary = "*"
 
 [dev-packages]
 
