--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ jobs:
 
   test:
     # Setup vm
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     env:
       POSTGRES_DB: ${{ secrets.POSTGRES_DB }}
 
